--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.15",
     "nodemon": "^1.18.7"
   },
   "devDependencies": {},
